# component-model-goroutines

./: .gitignore  Makefile  README.md  foo.go  go.mod
test/: Cargo.toml
test/src/: lib.rs  main.rs
wit/: test.wit
