[package]
name = "test-round-trip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-39.0.0", features = ["component-model-async"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-39.0.0", features = ["p3"] }
